<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:onClick="openLeadersActivity"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:drawablePadding="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sans_regular"
            android:textColor="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAlignment="viewStart"
            android:text="@string/thoughts_of_famous_legends"
            android:gravity="start" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginRight="15dp"
            android:textAlignment="viewEnd"
            android:text="@string/see_more"/>
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                app:cardUseCompatPadding="true"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:tag="@string/abdul_kalam_tag"
                android:onClick="showShayari"
                android:layout_marginEnd="-2dp"
                app:cardCornerRadius="10dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/leader_kalam_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="6dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/sans_regular"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginTop="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/a_p_j_abdul_kalam"
                        android:gravity="center_horizontal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                app:cardUseCompatPadding="true"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:tag="@string/leader_vivekanand_tag"
                android:onClick="showShayari"
                android:layout_marginEnd="-2dp"
                android:layout_marginStart="-2dp"
                app:cardCornerRadius="10dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/leader_vivekanand_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="6dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/sans_regular"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginTop="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/swami_vivekanand"
                        android:gravity="center_horizontal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                app:cardUseCompatPadding="true"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:tag="@string/mahatama_gandhi_tag"
                android:onClick="showShayari"
                android:layout_marginEnd="-2dp"
                android:layout_marginStart="-2dp"
                app:cardCornerRadius="10dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/leader_mahatama_gandhi_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="6dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/sans_regular"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginTop="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/mahatama_gandhi"
                        android:gravity="center_horizontal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                app:cardUseCompatPadding="true"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:tag="@string/patel_tag"
                android:onClick="showShayari"
                android:layout_marginEnd="-2dp"
                android:layout_marginStart="-2dp"
                app:cardCornerRadius="10dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/leader_patel_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="6dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/sans_regular"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginTop="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/sardar_vallabhbhai_patel"
                        android:gravity="center_horizontal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                app:cardUseCompatPadding="true"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:tag="@string/bhagat_singh_tag"
                android:onClick="showShayari"
                android:layout_marginEnd="-2dp"
                android:layout_marginStart="-2dp"
                app:cardCornerRadius="10dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/leader_bhagat_singh_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="6dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/sans_regular"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginTop="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/bhagat_singh"
                        android:gravity="center_horizontal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>